--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/defaultBackground"
-    tools:context=".app.features.SignUpActivity">
+    tools:context=".app.features.SignInActivity">
 
 
     <TextView
@@ -50,7 +50,7 @@
         android:layout_width="368dp"
 
         android:layout_height="57dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="64dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_baseline_phone_24"
         android:drawablePadding="20dp"
@@ -62,14 +62,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9"></androidx.appcompat.widget.AppCompatEditText>
+        app:layout_constraintTop_toBottomOf="@+id/textView9">
+
+    </androidx.appcompat.widget.AppCompatEditText>
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/appCompatEditText2"
         android:layout_width="368dp"
 
         android:layout_height="57dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:background="@drawable/input_bg"
         android:drawableLeft="@drawable/ic_baseline_lock_24"
         android:drawablePadding="20dp"
@@ -79,11 +81,11 @@
         android:inputType="textPassword"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appCompatEditText">
 
     </androidx.appcompat.widget.AppCompatEditText>
-
 
     <com.facebook.login.widget.LoginButton
 
@@ -91,14 +93,13 @@
         android:layout_width="309dp"
         android:layout_height="100dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/facebook_login"
         android:elevation="20dp"
         android:padding="10dp"
         android:text="Login with Facebook"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appCompatEditText2">
 
@@ -109,7 +110,7 @@
         android:id="@+id/textView8"
         android:layout_width="253dp"
         android:layout_height="41dp"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="40dp"
         android:fontFamily="@font/poppin"
         android:gravity="center"
         android:text="Don't Have an Account ?"
@@ -124,7 +125,7 @@
         android:id="@+id/registerText"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="72dp"
+        android:layout_marginBottom="48dp"
         android:clickable="true"
         android:fontFamily="@font/poppin_bold"
         android:gravity="center"
@@ -154,6 +155,22 @@
         app:layout_constraintStart_toStartOf="parent"
 
         app:layout_constraintVertical_bias="0.928" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="186dp"
+        android:id="@+id/signInButton"
+        android:layout_height="54dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/facebook_login"
+        android:fontFamily="@font/poppin_bold"
+        android:text="Sign In"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/loginProgressBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </androidx.appcompat.widget.AppCompatButton>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
