Maps Dark Mode Initialized

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="650dp"
         android:layout_marginLeft="10dp"
         android:elevation="10dp"
         >
@@ -18,12 +18,14 @@
             android:id="@+id/searchMap"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/input_bg"
-            android:drawableRight="@drawable/ic_baseline_search_24"
+            android:background="@drawable/input_black"
+            android:drawableLeft="@drawable/search"
+            android:gravity="center"
             android:hint="Enter Destination You Want "
-            android:paddingLeft="80dp"
             android:imeOptions="actionSearch"
-            android:textColor="@color/black">
+            android:paddingLeft="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white">
 
         </EditText>
 
@@ -37,15 +39,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MapsActivity" />
+
     <ImageView
         android:id="@+id/gps"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:scaleType="centerCrop"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="80dp"
-        android:src="@drawable/ic_baseline_gps_fixed_24">
+        android:layout_marginRight="10dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/gps">
 
     </ImageView>
 </RelativeLayout>
