--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,9 +6,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawerLayout"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="75dp"
@@ -17,6 +20,7 @@
             android:layout_marginLeft="10dp"
             android:elevation="10dp"
             >
+
 
             <EditText
                 android:id="@+id/searchMap"
@@ -39,6 +43,7 @@
         </RelativeLayout>
 
 
+
         <fragment
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -55,6 +60,20 @@
             android:layout_marginRight="10dp"
             android:background="@drawable/input_black"
             android:drawableStart="@drawable/gps"
+            android:paddingStart="8dp"
+            android:scaleType="centerCrop"
+            android:textCursorDrawable="@drawable/gps">
+        </androidx.appcompat.widget.AppCompatButton>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/navigationIcon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="125dp"
+            android:layout_marginRight="350dp"
+            android:background="@drawable/input_black"
+            android:drawableStart="@drawable/ic_baseline_menu_24"
             android:paddingStart="8dp"
             android:scaleType="centerCrop"
             android:textCursorDrawable="@drawable/gps">
