--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -29,7 +29,6 @@
 
     <TextView
 
-
         android:id="@+id/textView9"
         android:layout_width="226dp"
         android:layout_height="43dp"
@@ -46,18 +45,18 @@
 
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/appCompatEditText"
+        android:id="@+id/et_email"
         android:layout_width="368dp"
 
         android:layout_height="57dp"
         android:layout_marginTop="64dp"
         android:background="@drawable/input_bg"
-        android:drawableLeft="@drawable/ic_baseline_phone_24"
+        android:drawableLeft="@drawable/ic_baseline_email_24"
         android:drawablePadding="20dp"
         android:elevation="20dp"
         android:gravity="fill"
-        android:hint="Phone Number"
-        android:inputType="number"
+        android:hint="Email"
+        android:inputType="text"
         android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
@@ -67,7 +66,7 @@
     </androidx.appcompat.widget.AppCompatEditText>
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/appCompatEditText2"
+        android:id="@+id/et_password"
         android:layout_width="368dp"
 
         android:layout_height="57dp"
@@ -83,7 +82,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText">
+        app:layout_constraintTop_toBottomOf="@+id/et_email">
 
     </androidx.appcompat.widget.AppCompatEditText>
 
@@ -102,7 +101,7 @@
         android:fontFamily="@font/poppin_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText2">
+        app:layout_constraintTop_toBottomOf="@+id/et_password">
 
     </com.facebook.login.widget.LoginButton>
 
