--- a/app/src/main/res/layout/activity_sign_up_driver.xml
+++ b/app/src/main/res/layout/activity_sign_up_driver.xml
@@ -17,7 +17,6 @@
         android:fontFamily="@font/poppin_bold"
         android:gravity="center"
         android:text="Create An Account "
-
         android:textColor="@color/white"
         android:textFontWeight="@android:integer/config_longAnimTime"
         android:textSize="35dp"
@@ -44,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signUpName"
+        android:id="@+id/signUpNameDriver"
         android:layout_width="368dp"
 
         android:layout_height="57dp"
@@ -66,7 +65,7 @@
 
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signUpEmail"
+        android:id="@+id/signUpEmailDriver"
         android:layout_width="368dp"
 
         android:layout_height="57dp"
@@ -82,12 +81,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUpName">
+        app:layout_constraintTop_toBottomOf="@+id/signUpNameDriver">
 
     </androidx.appcompat.widget.AppCompatEditText>
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signUpPhoneNumber"
+        android:id="@+id/signUpPhoneNumberDriver"
         android:layout_width="368dp"
 
         android:layout_height="57dp"
@@ -103,14 +102,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appCompatEditText2">
+        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordDriver">
 
     </androidx.appcompat.widget.AppCompatEditText>
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/signUpDriverlicense"
+        android:id="@+id/signUpDriverLicense"
         android:layout_width="368dp"
-
         android:layout_height="57dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/input_bg"
@@ -124,12 +122,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUpPhoneNumber">
+        app:layout_constraintTop_toBottomOf="@+id/signUpPhoneNumberDriver">
 
     </androidx.appcompat.widget.AppCompatEditText>
 
     <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/appCompatEditText2"
+        android:id="@+id/signUpPasswordDriver"
         android:layout_width="368dp"
 
         android:layout_height="57dp"
@@ -145,25 +143,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUpEmail">
+        app:layout_constraintTop_toBottomOf="@+id/signUpEmailDriver">
 
     </androidx.appcompat.widget.AppCompatEditText>
 
     <ProgressBar
-        android:id="@+id/loginProgressBar"
+        android:id="@+id/progress_bar_signup_driver"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="96dp"
         android:outlineSpotShadowColor="@color/white"
-
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUpPhoneNumber" />
+        app:layout_constraintTop_toBottomOf="@+id/signUpPhoneNumberDriver" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_signupDriver"
         android:layout_width="186dp"
         android:layout_height="54dp"
         android:background="@drawable/roundedcorners"
@@ -174,7 +172,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginProgressBar"
+        app:layout_constraintTop_toBottomOf="@+id/progress_bar_signup_driver"
         app:layout_constraintVertical_bias="0.327">
 
     </androidx.appcompat.widget.AppCompatButton>
